# deliverit

./: CHANGELOG.md  README.md  pyproject.toml
deliverit/: changelog.py  config.py  context.py  deliverit.py  dotenv.py  git.py  git_remote.py  manifest_file.py  step.py  ui.py  version.py  version_declaration.py
example/go-module/: .deliverit.yaml
example/js-package/: .deliverit.yaml
example/python-package/: .deliverit.yml
